--- a/_includes/lefttree.html
+++ b/_includes/lefttree.html
@@ -1,5 +1,7 @@
+
+<!---文章的左边栏目，包含文章目录结构--->
 <div id="navigation">
-  <h1>年鉴</h1>
+  <h1>目录</h1>
   <ul class="nav sidenav">
   </ul>
   <div style="height: 200px;width: 200px;">
