modify index html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@900&display=swap" rel="stylesheet">
+	
+<!--
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/assets/js/skel.min.js"></script>
 	<script src="/assets/js/skel-panels.min.js"></script>
@@ -29,9 +33,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 		<div class="container">
 
 			<!-- Logo -->
-			<div id="logo">
-				<h1><a href="#">Linear</a></h1>
-				<span class="tag">By TEMPLATED</span>
+			<div id="logo" >
+				<h2><a href="#">行万里路，读万卷书，识万般人。</a></h2>
+				<span class="tag"></span>
 			</div>
 		</div>
 	</div>
@@ -42,7 +46,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 	<div id="tweet">
 		<div class="container">
 			<section>
-				<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
+				<blockquote>&ldquo;夫君子之行，静以修身，俭以养德。非淡泊无以明志，非宁静无以致远。&rdquo;</blockquote>
 			</section>
 		</div>
 	</div>
